# libESPER

./: .gitignore  CMakeLists.txt  LICENSE  README.md  esper.h  esper.lib
.github/workflows/: cmake-multi-platform.yml
fftw/: Makefile  config.status  libtool
fftw/api/: Makefile
fftw/dft/: Makefile
fftw/dft/scalar/: Makefile
fftw/dft/simd/: Makefile
fftw/doc/: Makefile
fftw/doc/FAQ/: Makefile
fftw/genfft/: Makefile
fftw/kernel/: Makefile
fftw/libbench2/: Makefile
fftw/m4/: Makefile
fftw/mpi/: Makefile
fftw/rdft/: Makefile
fftw/rdft/scalar/: Makefile
fftw/rdft/simd/: Makefile
fftw/reodft/: Makefile
fftw/simd-support/: Makefile
fftw/support/: Makefile
fftw/tests/: Makefile  bench
fftw/tests/.libs/: bench
fftw/threads/: Makefile
fftw/threads/.deps/: libfftw3_omp_la-api.Plo  libfftw3_omp_la-conf.Plo  libfftw3_omp_la-ct.Plo  libfftw3_omp_la-dft-vrank-geq1.Plo  libfftw3_omp_la-f77api.Plo  libfftw3_omp_la-hc2hc.Plo  libfftw3_omp_la-openmp.Plo  libfftw3_omp_la-rdft-vrank-geq1.Plo  libfftw3_omp_la-vrank-geq1-rdft2.Plo  libfftw3_threads_la-api.Plo  libfftw3_threads_la-conf.Plo  libfftw3_threads_la-ct.Plo  libfftw3_threads_la-dft-vrank-geq1.Plo  libfftw3_threads_la-f77api.Plo  libfftw3_threads_la-hc2hc.Plo  libfftw3_threads_la-rdft-vrank-geq1.Plo  libfftw3_threads_la-threads.Plo  libfftw3_threads_la-vrank-geq1-rdft2.Plo  libfftw3f_omp_la-api.Plo  libfftw3f_omp_la-conf.Plo  libfftw3f_omp_la-ct.Plo  libfftw3f_omp_la-dft-vrank-geq1.Plo  libfftw3f_omp_la-f77api.Plo  libfftw3f_omp_la-hc2hc.Plo  libfftw3f_omp_la-openmp.Plo  libfftw3f_omp_la-rdft-vrank-geq1.Plo  libfftw3f_omp_la-vrank-geq1-rdft2.Plo
fftw/threads/.libs/: libfftw3_omp.lai  libfftw3f_omp.lai
fftw/tools/: Makefile  fftw-wisdom  fftwf-wisdom
fftw/tools/.deps/: fftwf_wisdom-fftw-wisdom.Po
fftw/tools/.libs/: fftw-wisdom  fftwf-wisdom
nfft/: Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  nfft3.pc
nfft/.libs/: libnfft3.lai  libnfft3_threads.lai
nfft/applications/: Makefile  Makefile.in
nfft/applications/fastgauss/: Makefile  Makefile.in  fastgauss
nfft/applications/fastsum/: Makefile  Makefile.in  fastsum_benchomp  fastsum_benchomp_createdataset  fastsum_benchomp_detail_single  fastsum_benchomp_detail_threads  fastsum_matlab  fastsum_test  fastsum_test_threads
nfft/applications/fastsumS2/: Makefile  Makefile.in  fastsumS2
nfft/applications/mri/: Makefile  Makefile.in
nfft/applications/polarFFT/: Makefile  Makefile.in  linogram_fft_test  linogram_fft_test.c  mpolar_fft_test  mpolar_fft_test.c  polar_fft_test  polar_fft_test.c
nfft/applications/quadratureS2/: Makefile  Makefile.in  quadratureS2
nfft/applications/radon/: Makefile  Makefile.in  inverse_radon  inverse_radon.c  radon  radon.c
nfft/doc/html/: accuracy_8c_source.html  annotated.html  applications_2doxygen_8c_source.html  applications_2fastsumS2_2doxygen_8h_source.html  applications_2iterS2_2doxygen_8h_source.html  applications_2mri_2doxygen_8c_source.html  applications_2mri_2mri2d_2doxygen_8h_source.html  applications_2mri_2mri3d_2doxygen_8h_source.html  applications_2polarFFT_2doxygen_8h_source.html  applications_2quadratureS2_2doxygen_8h_source.html  assert_8c_source.html  bessel__i0_8c_source.html  bspline_8c_source.html  classes.html  config_8h_source.html  construct__data__2d1d_8c_source.html  construct__data__2d_8c_source.html  construct__data__3d_8c_source.html  construct__data__inh__2d1d_8c_source.html  construct__data__inh__3d_8c_source.html  cycle_8h_source.html  damp_8c_source.html  dir_000001_000002.html  dir_000004_000002.html  dir_000005_000002.html  dir_000007_000002.html  dir_000008_000002.html  dir_000009_000002.html  dir_000011_000002.html  dir_000012_000002.html  dir_000014_000002.html  dir_000016_000002.html  dir_000017_000002.html  dir_000018_000002.html  dir_000021_000002.html  dir_000022_000002.html  dir_000023_000002.html  dir_000024_000002.html  dir_000025_000002.html  dir_000026_000002.html  (+316 more)
nfft/doxygen/: Makefile  Makefile.in  doxygen.Doxyfile
nfft/examples/: Makefile  Makefile.in
nfft/examples/fpt/: Makefile  Makefile.in
nfft/examples/mri/: Makefile  Makefile.in
nfft/examples/nfct/: Makefile  Makefile.in
nfft/examples/nfft/: Makefile  Makefile.in  flags  ndft_fast  nfft_benchomp  nfft_benchomp_createdataset  nfft_benchomp_detail_single  nfft_benchomp_detail_threads  nfft_times  simple_test  taylor_nfft
nfft/examples/nfsft/: Makefile  Makefile.in  nfsft_benchomp  nfsft_benchomp_createdataset  nfsft_benchomp_detail_single  nfsft_benchomp_detail_threads  simple_test_threads
nfft/examples/nfsoft/: Makefile  Makefile.in
nfft/examples/nfst/: Makefile  Makefile.in  simple_test.c
nfft/examples/nnfft/: Makefile  Makefile.in  accuracy
nfft/examples/nsfft/: Makefile  Makefile.in  nsfft_test
nfft/examples/solver/: Makefile  Makefile.in  glacier
nfft/include/: Makefile  Makefile.in  config.h  config.h.in  ticks.h
nfft/julia/: Makefile  Makefile.in
nfft/julia/fastsum/: Makefile  Makefile.in
nfft/julia/nfct/: Makefile  Makefile.in
nfft/julia/nfft/: Makefile  Makefile.in
nfft/julia/nfst/: Makefile  Makefile.in
nfft/kernel/: Makefile  Makefile.in
nfft/kernel/fpt/: Makefile  Makefile.in
nfft/kernel/mri/: Makefile  Makefile.in
nfft/kernel/nfct/: Makefile  Makefile.in
nfft/kernel/nfft/: Makefile  Makefile.in
nfft/kernel/nfsft/: Makefile  Makefile.in
nfft/kernel/nfsoft/: Makefile  Makefile.in
nfft/kernel/nfst/: Makefile  Makefile.in
nfft/kernel/nnfft/: Makefile  Makefile.in
nfft/kernel/nsfft/: Makefile  Makefile.in
nfft/matlab/: Makefile  Makefile.in
nfft/support/: Makefile  Makefile.in
nfft/tests/: Makefile  Makefile.in
nfft_win/: libnfft3_threads-4.exp  libnfft3_threads-4.lib  nfft3.h
src/: fft.c  fft.h  interpolation.c  interpolation.h  test.c  util.c  util.h
src/ESPER/: components.c  components.h  esper.c  esper.h  pitchCalcFallback.c  pitchCalcFallback.h
src/Renderer/: modifiers.c  modifiers.h  renderer.c  renderer.h
src/Resampler/: loop.c  loop.h  resampler.c  resampler.h
(+254 files in other folders)
